# CausalAgent

./: .dockerignore  .env.example  .gitignore  Dockerfile  MASTER_PROMPT.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
app/: main.py  worker.py
app/agents/: evaluator.py  executor.py  feedback.py  r_agent.py  reviewer.py  sql_agent.py
app/bots/: __init__.py  api_client.py  discord_bot.py
app/core/: cleanup.py  config.py  db.py  graph.py  llm.py  observability.py  persistence.py  schema_def.py  security.py  sensitivity.py  state.py
app/events/: __init__.py  consumer.py  producer.py  schemas.py
app/models/: schemas.py
app/sim/: __init__.py  effects.py  routes.py
docs/: ARCHITECTURE.md  PROJECT_REPORT.md  SECURITY.md
sandbox/: Dockerfile  entrypoint.sh  main.py
scripts/: eval_agent.py  grant_readonly_role.py  redteam_agent.py  run_task.py  seed_db.py  smoke_anthropic.py  stream_events.py  verify_sandbox.py
tests/: test_bot_api_client.py  test_cleanup.py  test_evaluator.py  test_event_consumer.py  test_feedback_redaction.py  test_graph_routing.py  test_ingress_auth.py  test_interpretation_and_fallback.py  test_observability.py  test_pipeline_deterministic.py  test_pipeline_treatments.py  test_progress.py  test_public_result.py  test_reliability.py  test_sandbox_isolation.py  test_sensitivity.py  test_sim_effects.py  test_sql_validation.py
