[project]
name = "causalagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.3",
    "fastapi>=0.136.1",
    "kafka-python>=2.3.1",
    "langchain-anthropic>=1.4.3",
    "langgraph>=1.2.1",
    "pandas>=2.2.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "requests>=2.32.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
# The app is a plain package directory (no src/ install), so put the project
# root on sys.path for imports like `from app.core...`.
pythonpath = ["."]
testpaths = ["tests"]
